API Docs: RoomStatus
